--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "clsx": "2.1.1",
+    "framer-motion": "^12.23.24",
     "googleapis": "^161.0.0",
     "lucide-react": "0.454.0",
     "next": "14.2.5",
